[tool.poetry]
name = "poetry-jfrog-learn"
version = "0.1.0"
description = "Reproduction project"
authors = ["Omrio <omrio@jfrog.com>"]
packages = [{ include = "poetry_testing" }]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
