[project]
name = "pip-jfrog-learn"
version = "0.1.0"
description = "pip + requirements.txt JFrog Artifactory reproduction"
authors = [
    { name = "Omrio", email = "omrio@jfrog.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pip_jfrog_learn"]
